# 2024-25d-fai2-adsai-group-cv_trial

./: README.md  docker-compose.yml  pyproject.toml  test.py
app/: main.py  model.py  schemas.py
image_classifier_api/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
image_classifier_api/app/: main.py  model.py  utils.py
image_classifier_api/tests/: test_model.py  test_utils.py
model-deployment/: Dockerfile  pyproject.toml
