[project]
name = "2024-25d-fai2-adsai-group-cv-trial"
version = "0.1.0"
description = "Basic Flask"
authors = [
    {name = "karna24",email = "rewatkar.k@buas.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
