[tool.poetry]
name = "image_classifier_api"
version = "0.1.0"
description = "Image classification API with PyTorch"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
torchvision = "^0.22.0"
flask = "^3.1.1"
pillow = "^11.2.1"
numpy = "^2.2.6"


[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"