[tool.poetry]
name = "pytorch-model-server"
version = "0.1.0"
description = "PyTorch Model Serving API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"  # PyTorch
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
numpy = "^1.24.3"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000"